Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-10124

[R] Write functions don't follow umask setting

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.0.1
    • 2.0.0
    • C++, R

    Description

       

       

      The write_feather and write_parquet functions don't seem to follow the R umask settings. Please let me know if you need any other information from me to replicate or document this issue. Thanks!

      Code to replicate bug:

       

      library(arrow)
      Sys.umask(mode = "2")
      Sys.umask()
      
      arrow::write_feather(x = cars, sink = "~/test.feather")
      arrow::write_parquet(x = cars, sink = "~/test.parquet")
      write.csv(x = cars, file = "~/test.csv")
      
      system("ls -l ~/test.feather")
      system("ls -l ~/test.parquet")
      system("ls -l ~/test.csv")
      
      sessionInfo()
      

      Full output:

       

       

      > library(arrow)
      
      Attaching package: 'arrow'
      
      The following object is masked from 'package:utils':
      
          timestamp
      
      Warning message:
      package 'arrow' was built under R version 4.0.2 
      > 
      > Sys.umask(mode = "2")
      > Sys.umask()
      [1] "2"
      > 
      > arrow::write_feather(x = cars, sink = "~/test.feather")
      > arrow::write_parquet(x = cars, sink = "~/test.parquet")
      > write.csv(x = cars, file = "~/test.csv")
      > 
      > system("ls -l ~/test.feather")
      -rw-r--r--  1 chacalle  staff  994 Sep 28 12:14 /Users/chacalle/test.feather
      > system("ls -l ~/test.parquet")
      -rw-r--r--  1 chacalle  staff  1243 Sep 28 12:14 /Users/chacalle/test.parquet
      > system("ls -l ~/test.csv")
      -rw-rw-r--  1 chacalle  staff  552 Sep 28 12:14 /Users/chacalle/test.csv
      > 
      > sessionInfo()
      R version 4.0.0 (2020-04-24)
      Platform: x86_64-apple-darwin17.0 (64-bit)
      Running under: macOS Catalina 10.15.6
      
      Matrix products: default
      BLAS:   /System/Library/Frameworks/Accelerate.framework/Versions/A/Frameworks/vecLib.framework/Versions/A/libBLAS.dylib
      LAPACK: /Library/Frameworks/R.framework/Versions/4.0/Resources/lib/libRlapack.dylib
      
      locale:
      [1] en_US.UTF-8/en_US.UTF-8/en_US.UTF-8/C/en_US.UTF-8/en_US.UTF-8
      
      attached base packages:
      [1] stats     graphics  grDevices utils     datasets  methods   base     
      
      other attached packages:
      [1] arrow_1.0.1
      
      loaded via a namespace (and not attached):
       [1] tidyselect_1.1.0 bit_4.0.4        compiler_4.0.0   magrittr_1.5     assertthat_0.2.1
       [6] R6_2.4.1         tools_4.0.0      glue_1.4.2       Rcpp_1.0.5       bit64_4.0.5     
      [11] vctrs_0.3.4      rlang_0.4.7      purrr_0.3.4     
      

      Attachments

        Issue Links

          Activity

            People

              apitrou Antoine Pitrou
              chacalle Charlton Callender
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 40m
                  40m