ARROW-10124: [C++] Don't restrict permissions when creating files

The permissions of a file created by Arrow should simply follow the current umask.

Closes #8297 from pitrou/ARROW-10124-follow-umask

Authored-by: Antoine Pitrou <antoine@python.org>
Signed-off-by: Wes McKinney <wesm@apache.org>